# goit-pythonweb-hw-08

./: pyproject.toml
migrations/versions/: ac49c7591c53_init.py
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/services/: contacts.py
