[project]
name = "contacts"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
